// E-Commerce Database Schema

// Users and Authentication
Table User {
  User_ID int [pk]
  email varchar [unique]
  password varchar
  first_name varchar
  last_name varchar
  phone_number varchar
  role varchar [default: 'customer']
  account_status varchar [default: 'active']
  birthday date
  Note: 'username field is disabled, email is used for authentication'
}

Table Address {
  Address_ID int [pk]
  User_ID int [ref: > User.User_ID]
  street varchar
  city varchar
  state varchar
  zip_code varchar
}

// Products and Categories
Table Product {
  Product_ID int [pk]
  SKU varchar [unique]
  product_name varchar
  description text
  price decimal
  weight decimal
  dimensions varchar
  status varchar
  category_id int [ref: > Category.Category_ID]
  Discount_ID int [ref: > Discount.Discount_ID]
}

Table Category {
  Category_ID int [pk]
  name varchar
  description text
  parent_category_id int [ref: > Category.Category_ID]
}

// Inventory Management
Table Product_Inventory {
  Product_ID int [pk, ref: > Product.Product_ID]
  Warehouse_ID int [pk, ref: > Warehouse.Warehouse_ID]
  Quantity int
  Minimum_Quantity int
  Maximum_Quantity int
  Last_Updated timestamp
  status varchar
}

Table Warehouse {
  Warehouse_ID int [pk]
  Name varchar
  Location varchar
  status varchar
}

Table Inventory_Transaction {
  Transaction_ID int [pk]
  Product_ID int [ref: > Product.Product_ID]
  Warehouse_ID int [ref: > Warehouse.Warehouse_ID]
  Quantity int
  Type varchar
  Reference_Type varchar
  Reference_ID int
}

// Shopping Cart
Table Cart {
  Cart_ID int [pk]
  User_ID int [ref: > User.User_ID]
}

Table Cart_Item {
  Cart_Item_ID int [pk]
  Cart_ID int [ref: > Cart.Cart_ID]
  Product_ID int [ref: > Product.Product_ID]
  quantity int
}

// Wishlist
Table Wishlist {
  Wishlist_ID int [pk]
  User_ID int [ref: > User.User_ID]
}

Table Wishlist_Item {
  Wishlist_Item_ID int [pk]
  Wishlist_ID int [ref: > Wishlist.Wishlist_ID]
  Product_ID int [ref: > Product.Product_ID]
}

// Orders
Table Order {
  Order_ID int [pk]
  User_ID int [ref: > User.User_ID]
  order_date timestamp
  total_price decimal
  status varchar
  Address_ID int [ref: > Address.Address_ID]
  Discount_ID int [ref: > Discount.Discount_ID]
}

Table Order_Item {
  Order_Item_ID int [pk]
  Order_ID int [ref: > Order.Order_ID]
  Product_ID int [ref: > Product.Product_ID]
  quantity int
  price decimal
}

// Shipment
Table Shipment {
  id int [pk]
  order_id int [ref: > Order.Order_ID]
  shipment_date timestamp
  carrier varchar
  tracking_number varchar [unique]
  status varchar
}

// Payment
Table Payment {
  id int [pk]
  order_id int [ref: > Order.Order_ID]
  payment_date timestamp
  payment_method varchar
  transaction_id varchar [unique]
  amount decimal
}

// Discounts
Table Discount {
  Discount_ID int [pk]
  value decimal
  discount_type varchar
  start_date timestamp
  end_date timestamp
  description text
}

Table User_Discount {
  User_ID int [pk, ref: > User.User_ID]
  Discount_ID int [pk, ref: > Discount.Discount_ID]
}

// Product Reviews and Comments
Table Comment {
  Comment_ID int [pk]
  Product_ID int [ref: > Product.Product_ID]
  User_ID int [ref: > User.User_ID]
  text text
  star int
  likes_count int
  dislikes_count int
  reply_comment_ID int [ref: > Comment.Comment_ID]
}

// Returns
Table Return_Request {
  id int [pk]
  order_id int [ref: > Order.Order_ID]
  user_id int [ref: > User.User_ID]
  status varchar
  reason text
  refund_amount decimal
  tracking_number varchar
  shipment_status varchar
}

Table Return_Item {
  id int [pk]
  return_request_id int [ref: > Return_Request.id]
  order_item_id int [ref: > Order_Item.Order_Item_ID]
  quantity int
  status varchar
  price_adjustment decimal
  description text
}

// Bundles
Table Bundle {
  Bundle_ID int [pk]
  Name varchar
  Description text
  status varchar
}

Table Bundle_Product {
  Bundle_ID int [pk, ref: > Bundle.Bundle_ID]
  Product_ID int [pk, ref: > Product.Product_ID]
  Quantity int
  Price_adjustment int
}

// Vendor
Table Vendor {
  user_id int [pk, ref: - User.User_ID]
  shop_name varchar
  description text
  rating decimal [default: 0.00]
  status varchar
}

Table Vendor_Product {
  vendor_id int [pk, ref: > Vendor.user_id]
  product_id int [pk, ref: > Product.Product_ID]
}

Table Vendor_Review {
  id int [pk]
  vendor_id int [ref: > Vendor.user_id]
  user_id int [ref: > User.User_ID]
  rating decimal
  comment text
}

// Support Tickets
Table Ticket {
  Ticket_ID int [pk]
  User_ID int [ref: > User.User_ID]
  type varchar
  title varchar
  status varchar
  priority varchar
  created_at timestamp
  updated_at timestamp
}

Table Message {
  Message_ID int [pk]
  Ticket_ID int [ref: > Ticket.Ticket_ID]
  Sender_User_ID int [ref: > User.User_ID] // User who sent this message
  content text
  date timestamp
}

Table Ticket_Access {
  Ticket_ID int [pk, ref: > Ticket.Ticket_ID]
  User_ID int [pk, ref: > User.User_ID]
  access_type varchar // 'read', 'write', 'admin'
}